--- a/src/components/CanvasEditor/Footer/Footer.scss
+++ b/src/components/CanvasEditor/Footer/Footer.scss
@@ -1,8 +1,10 @@
 .footer {
     display: flex;
-    position: relative;
     justify-content: center;
     align-items: center;
-    margin: 0 20px 35px 0;
-    z-index: 2;
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    right: 20px;
+    bottom: 10px;
 }
