--- a/src/components/CanvasEditor/Header/Header.scss
+++ b/src/components/CanvasEditor/Header/Header.scss
@@ -3,6 +3,6 @@
     position: relative;
     justify-content: center;
     align-items: center;
-    margin: 35px 20px 0 20px;
-    z-index: 2;
+    height: 50px;
+    margin: 10px 20px;
 }
