--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -2,7 +2,7 @@
   --default-theme-color: #F3F8FF;
   --default-theme-hoverColor: #d2e2f9;
   --default-menu-bg-color: #e6e6e6;
-  --default-spacing: 5px;
+  --default-spacing: 15px;
 
   --button-borderColor: #dbeaff;
   --light-border-color: #ebebeb;
